--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -87,6 +87,26 @@ pre {
   box-shadow: rgb(33, 38, 45) 0px -1px 0px 0px inset;
 }
 
+#canvas {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 15%;
+	z-index: -1;
+
+	background-image: radial-gradient(#22272d 60%, #434a52 80%, #697478 100%);
+}
+
+.showcase-image {
+	border: 1px solid white;
+	transition: transform 0.1s ease;
+
+	width: 300px;
+	height: 300px;
+}
+
 /* TODO: Check if this is needed or not */
 /* 
 img,
