--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,8 @@
         <h3>{{ .Site.Params.Description }}</h3>
     {{ end }}
 
+    <hr class="divider">
+
     <div class="recent-posts-text">
       <h2>Check out the most recent...</h2>
     </div>
