--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -637,11 +637,17 @@ table td {
 	background-image: radial-gradient(#f5f5f5 60%, #e1e1e1 80%, #b0b0b0 100%);
 }
 
-
 .showcase-image {
 	border: 1px solid black;
 	transition: transform 0.1s ease;
 
 	width: 300px;
 	height: 300px;
+}
+
+hr.divider {
+  border: none;
+  height: 1px;
+  background-color: #a6a6a6;
+  margin: 35px 0;
 }
