make divider brighter

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -648,6 +648,6 @@ table td {
 hr.divider {
   border: none;
   height: 1px;
-  background-color: #a6a6a6;
+  background-color: #ededed;
   margin: 35px 0;
 }
