--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -17,11 +17,11 @@
         <p>
             {{ .Content }}
         </p>
-        {{ if .Site.DisqusShortname }}
+        {{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
         <div class="post-comments">
             {{ template "_internal/disqus.html" . }}
         </div>
-        {{ end }}
+        {{ end }}        
     </div>
 
     <div class="prev-next">
