--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,6 +18,6 @@
         </main>
         {{- partial "footer.html" . -}}
 
-        <script src="{{ resources.Get "assets/backgroundEffect.js" | relURL }}"></script>
+        <script src="{{ resources.Get "/backgroundEffect.js" | relURL }}"></script>
     </body>
 </html>
