--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,15 +22,7 @@
             </div>
             {{ end }}
 
-            <span class="nav-icons-divider"></span>
-            <div class="nav-link dark-theme-toggle">
-                <span id="dark-theme-toggle-screen-reader-target" class="sr-only"></span>
-                <a>
-                    <span id="theme-toggle-icon" data-feather="moon"></span>
-                </a>
-            </div>
-
-            <div class="nav-link" id="hamburger-menu-toggle">
+            <div class="nav-link" id="hamburger-menu-toggle">S
                 <span id="hamburger-menu-toggle-screen-reader-target" class="sr-only">menu</span>
                 <a>
                     <span data-feather="menu"></span>
@@ -46,14 +38,7 @@
                     </a>
                 </li>
                 {{ end }}
-                <li class="nav-item dark-theme-toggle">
-                    <span id="dark-theme-toggle-screen-reader-target" class="sr-only">theme</span>
-                    <a>
-                        <span id="theme-toggle-icon" data-feather="moon"></span>
-                    </a>
-                </li>
             </ul>
-
         </div>
     </nav>
 </header>
